# Tello_SLAM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  detect_aruco  run01.csv  run1.csv  tello_flight_test  tello_sensor_test  tello_vision_test  usb01.csv
app/: CMakeLists.txt  run_tello_slam.cpp
config/: vision_system_config.yaml  vision_system_config_example.yaml
include/: backend.h  common.h  frontend.h  map.h  supervisor.h  system.h  viewer.h
include/camera/: brown_conrady.h  camera.h  pinhole.h
include/data_types/: aruco_feature.h  aruco_landmark.h  feature.h  frame.h  landmark.h
include/door/: door_detector.h
include/estimator/filter/: extended_kalman_filter.h
include/imu/: imu_reader.h
include/marker/: aruco_detector.h
include/port/: config.h  data_stream.h  dataset.h  setting.h
include/tool/: supervisor.h  tool_system.h
include/toolbox/: conversion_toolbox.h  math_toolbox.h  utility_toolbox.h
python_tools/: check_installation.ipynb  export_yolo.py  installation_check.ipynb  split_dataset.py  test_yolo.ipynb  train_yolo.ipynb
python_tools/.ipynb_checkpoints/: installation_check-checkpoint.ipynb
python_tools/instructions/: train_door.yaml
python_tools/runs/detect/train/: args.yaml
python_tools/runs/detect/train2/: args.yaml  results.csv
python_tools/runs/detect/train3/: args.yaml  results.csv
python_tools/runs/detect/train4/: args.yaml  results.csv
python_tools/runs/detect/train5/: args.yaml  results.csv
src/: CMakeLists.txt  backend.cpp  frontend.cpp  map.cpp  supervisor.cpp  system.cpp  viewer.cpp
src/camera/: camera.cpp
src/data_types/: aruco_feature.cpp  aruco_landmark.cpp  feature.cpp  frame.cpp  landmark.cpp
src/door/: door_detector.cpp
src/estimator/filter/: extended_kalman_filter.cpp
src/imu/: imu_reader.cpp
src/marker/: aruco_detector.cpp
src/port/: config.cpp  data_stream.cpp  dataset.cpp  setting.cpp
src/tool/: supervisor.cpp  tool_system.cpp
test/: CMakeLists.txt  detect_aruco.cpp  detect_aruco_as_thread.cpp  detect_aruco_for_data_collection.cpp  detect_door.cpp  tello_flight_test.cpp  tello_sensor_test.cpp  tello_sensor_test_with_plot.cpp  tello_test.cpp  tello_vision_test.cpp  tello_vision_test_minimal.cpp
tool/: CMakeLists.txt  aruco_roll_reader.cpp  brown_conrady_projection.asv  brown_conrady_projection.m  collect_aruco_data.cpp  detect_aruco_minimal.cpp  pinhole_projection.m  propose_Q_and_R.ipynb  propose_Q_and_R.py  read_roll.cpp  roll_reader.cpp
tool/iframe_figures/: figure_10.html  figure_14.html  figure_16.html  figure_22.html  figure_24.html  figure_25.html  figure_29.html  figure_31.html  figure_34.html  figure_36.html  figure_38.html  figure_40.html  figure_42.html  figure_44.html  figure_46.html  figure_48.html  figure_50.html  figure_52.html  figure_54.html  figure_56.html  figure_58.html  figure_60.html  figure_62.html  figure_64.html  figure_66.html  figure_68.html  figure_70.html  figure_72.html
